# live-translation-local

./: .gitignore  2ayoyo.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXOCORTEX_INTEGRATION.md  G2_INTEGRATION.md  README.md  SPEAKER_ASSIGNMENT_GUIDE.md  config-m4max.yaml  config.yaml  glossary.yaml  live-translate  pyproject.toml  requirements.txt  run.py  setup_speaker_recognition.sh  speaker_enrollment.py  speaker_enrollment_ui.py
docs/plans/: 2026-01-25-exocortex-foundation-design.md  2026-01-25-exocortex-phase1-foundation.md
ios/: Package.swift
ios/OmiApp/: OmiApp-Bridging-Header.h  OmiAppApp.swift
ios/OmiApp.xcodeproj/: project.pbxproj
ios/OmiApp/Models/: SessionModel.swift  TranscriptSegment.swift
ios/OmiApp/OmiApp/Models/: OpusError.swift
ios/OmiApp/OmiApp/Services/: APIClient.swift  AudioBuffer.swift  AudioProcessor.swift  OpusDecoder.swift
ios/OmiApp/OmiAppTests/: AudioBufferTests.swift  OpusDecoderTests.swift
ios/OmiApp/Services/: BLEManager.swift
scripts/: demo_diarization.py
src/: __init__.py  audio_capture.py  cli.py  diarization.py  g2_output.py  obs_output.py  omi_input.py  pipeline.py  session_logger.py  speaker_recognition.py  transcriber.py  translator.py  whisper_cpp_transcriber.py
src/backends/: __init__.py  base.py  detector.py
src/exocortex/: cli.py  embedder.py  indexer.py  memory.py  storage.py
tests/: test_embedder.py  test_indexer.py  test_memory.py  test_storage.py
