[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "live-translator"
version = "0.1.0"
description = "Live speech transcription and translation for OBS Studio"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Live Translator Team"}
]
keywords = ["obs", "translation", "transcription", "whisper", "nllb", "live", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "ctranslate2>=4.0.0",
    "transformers>=4.35.0",
    "sentencepiece>=0.1.99",
    "torch>=2.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
live-translator = "src.cli:cli"
exo = "src.exocortex.cli:cli"

[project.urls]
Homepage = "https://github.com/live-translator/live-translator-obs"
Repository = "https://github.com/live-translator/live-translator-obs"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
